# Processes-Priority-Manager

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: Main.yml  release.yml
src/: .editorconfig  Cpu_affinity.sln  SolutionInfo.cs  updateVersion.ps1
src/Affinity_Manager_Installer/: AppComponents.wxs  Folders.wxs  Package.en-us.wxl  Package.wxs
src/Affinity_manager/: Affinity_manager.csproj  App.xaml.cs  MainPageViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs
src/Affinity_manager/Exceptions/: ServiceNotInstalledException.cs
src/Affinity_manager/Model/: AffinityConverter.cs  Cleaner.cs  CpuPriorityClass.cs  (+5 more)
src/Cpu_affinity/: ApplicationRunner.cs  Cpu_affinity.csproj  Program.cs
src/PPM.Application/: App.xaml  App.xaml.cs  MainWindow.xaml.cs  PPM.Application.csproj  Program.cs  app.manifest  appsettings.json
src/PPM.Application.IntegrationTests/: PPM.Application.IntegrationTests.csproj
src/PPM.Application.Tests/: PPM.Application.Tests.csproj
src/PPM.Installer/: Actions.wxs  Affinity_Manager_Installer.wixproj  AppComponents.wxs  Folders.wxs  PPM.Installer.wixproj  Package.wxs
src/PPM.InstallerBundle/: Bundle.wxs  PPM.InstallerBundle.wixproj  license.rtf
src/PPM.TestApp/: PPM.TestApp.csproj
src/PPM.Unsafe/: CoreGroup.cs  CoreInfo.cs  CpuInfo.cs  IoPriorityHint.cs  NTSTATUS.cs  PPM.Unsafe.csproj  PagePriorityInformation.cs  ProcessExtenstions.cs  ProcessInfoClass.cs
src/TestApp/: Program.cs
src/pm_affinityservice/: Cargo.toml  build.rs
src/pm_affinityservice/src/: affinity_getter.rs  main.rs  register.rs  wmi_watcher.rs
(+113 files in other folders)
