[package]
name = "pm_affinityservice"
version = "0.2.0"
edition = "2021"

[package.metadata.winres]
LegalCopyright = "Copyright 2024"
ProductName = "Processes Priority Manager"

[[bin]]
name = "PPM_Service"
path = "src/main.rs"

[dependencies]
windows-service = "0.7.0"
log = "0.4"
simplelog = "0.11"
wmi = "0.14"
serde = { version = "1.0", features = ["derive"] }
winreg = "0.52"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
]

[build-dependencies]
embed-manifest = "1.4.0"
winres = "0.1"
static_vcruntime = "2.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
